--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,38 @@
-version: '3.3'
+#version: '3.3'
+#services:
+#  API:
+#    image: 'kiii-image'
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      [MySQL]
+#    environment:
+#      - SPRING_DATASOURCE_URL=jdbc:mysql://MySQL:3306/kiii
+#      - SPRING_DATASOURCE_USERNAME=root
+#      - SPRING_DATASOURCE_PASSWORD=Renesansa123!!!
+#      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+#
+#  MySQL:
+#    image: mysql
+#    ports:
+#      - "3306:3306"
+#    environment:
+#      - MYSQL_DB=kiii
+#      - MYSQL_ROOT_PASSWORD=Renesansa123!!!
+
+version: "3"
 services:
   API:
-    image: 'kiii-image'
+    image: kiii-employee
     ports:
-      - "8080:8080"
+      - "8000:8000"
     depends_on:
-      [MySQL]
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://MySQL:3306/kiii
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=Renesansa123!!!
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - db
 
-  MySQL:
-    image: mysql
+  db:
+    image: mysql:8
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_DB=kiii
-      - MYSQL_ROOT_PASSWORD=Renesansa123!!!
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=kiii
